Améliorer le design - Amélioration du parcours - Ajout d'un localStorage comprenant employé et client pour faciliter le parcours - Ajout d'une page editionDevis qui simplifie les devs pour le parcours (copie de conception devis prenant en parametres client et projet) - Corrections - Correction de la modale nouveau client - Correction de la modale ajout produit

--- a/src/components/add-customer/add-customer.html
+++ b/src/components/add-customer/add-customer.html
@@ -1,119 +1,106 @@
 <ion-header>
-
-
+  <ion-toolbar text-center>
+    <ion-buttons float-start>
+      <button ion-button (click)="pop()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>
+      NOUVEAU CLIENT
+    </ion-title>
+  </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <form #form="ngForm"(ngSubmit)="addCustomer(form)">
 
-  <ion-card class="ion-card">
-    <ion-content padding>
-      <ion-icon name="arrow-back"  (click)="pop()"></ion-icon>
+    <ion-grid class="height-max" >
 
-    <ion-card-content>
-      <form #form="ngForm"(ngSubmit)="addCustomer(form)" >
+      <ion-row class="height-max" [(ngModel)]="clientForm.genreClient" name="genreClient" ngDefaultControl>
+        <ion-list radio-group>
+          <ion-item>
+            <ion-label>Madame</ion-label>
+            <ion-radio checked="true" value="Madame"></ion-radio>
+          </ion-item>
 
+          <ion-item>
+            <ion-label>Monsieur</ion-label>
+            <ion-radio checked="false" value="Monsieur"></ion-radio>
+          </ion-item>
+        </ion-list>
+      </ion-row>
 
-        <ion-grid class="ion-grid" >
+      <ion-row class="height-max" >
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Prénom</ion-label>
+            <ion-input name="name" [(ngModel)]="clientForm.prenomClient" type="text" clearInput></ion-input>
+          </ion-item>
+        </ion-col >
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Nom</ion-label>
+            <ion-input name="surname"[(ngModel)]="clientForm.nomClient" type="text" clearInput></ion-input>
+          </ion-item>
+        </ion-col >
+      </ion-row>
 
-          <ion-row>
-            <ion-title text-center>NOUVEAU CLIENT</ion-title>
-          </ion-row>
+      <ion-row class="height-max" >
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Adresse</ion-label>
+            <ion-input name="address" [(ngModel)]="clientForm.adresseRueClient" type="text" clearInput> </ion-input>
+          </ion-item>
+        </ion-col >
+      </ion-row>
 
-          <ion-row class="ion-row" [(ngModel)]="clientForm.genreClient" name="genreClient" ngDefaultControl >
-            <ion-list radio-group>
-              <ion-item>
-                <ion-label>Madame</ion-label>
-                <ion-radio checked="true" value="Madame"></ion-radio>
-              </ion-item>
+      <ion-row class="height-max">
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Code Postal</ion-label>
+            <ion-input name="zipcode" [(ngModel)]="clientForm.codePostalClient" type="text" clearInput></ion-input>
+          </ion-item>
+        </ion-col >
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Ville</ion-label>
+            <ion-input name="city"[(ngModel)]="clientForm.adresseVilleClient" type="text" clearInput></ion-input>
+          </ion-item>
+        </ion-col >
+      </ion-row>
 
-              <ion-item>
-                <ion-label>Monsieur</ion-label>
-                <ion-radio checked="false" value="Monsieur"></ion-radio>
-              </ion-item>
-            </ion-list>
+      <ion-row class="height-max" >
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Numéro de téléphone</ion-label>
+            <ion-input name="phone" [(ngModel)]="clientForm.telephoneClient" type="text" clearInput></ion-input>
+          </ion-item>
+        </ion-col >
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Date de naissance</ion-label>
+            <ion-datetime name="birthdate" displayFormat="DD/MM/YYYY" [(ngModel)]="clientForm.dateNaissanceClient" clearInput></ion-datetime>
+          </ion-item>
+        </ion-col >
+      </ion-row>
 
-          </ion-row>
+      <ion-row class="height-max">
+        <ion-col>
+          <ion-item>
+            <ion-label floating>Email</ion-label>
+            <ion-input name="email" [(ngModel)]="clientForm.mailClient" type="text" clearInput></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
-          <ion-row class="ion-row" >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Prénom</ion-label>
-                <ion-input name="name" [(ngModel)]="clientForm.prenomClient" type="text" clearInput></ion-input>
-              </ion-item>
-            </ion-col >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Nom</ion-label>
-                <ion-input name="surname"[(ngModel)]="clientForm.nomClient" type="text" clearInput></ion-input>
-              </ion-item>
-            </ion-col >
-          </ion-row>
+      <ion-row>
+        <ion-col>
+          <button ion-button type="submit" float-right>VALIDER</button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
-          <ion-row class="ion-row" >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Adresse</ion-label>
-                <ion-input name="address" [(ngModel)]="clientForm.adresseRueClient" type="text" clearInput> </ion-input>
-              </ion-item>
-            </ion-col >
-          </ion-row>
+  </form>
+</ion-content>
 
-
-
-          <ion-row class="ion-row" >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Code Postal</ion-label>
-                <ion-input name="zipcode" [(ngModel)]="clientForm.codePostalClient" type="text" clearInput></ion-input>
-              </ion-item>
-            </ion-col >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Ville</ion-label>
-                <ion-input name="city"[(ngModel)]="clientForm.adresseVilleClient" type="text" clearInput></ion-input>
-              </ion-item>
-            </ion-col >
-          </ion-row>
-
-          <ion-row class="ion-row" >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Numéro de téléphone</ion-label>
-                <ion-input name="phone" [(ngModel)]="clientForm.telephoneClient" type="text" clearInput></ion-input>
-              </ion-item>
-            </ion-col >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Date de naissance</ion-label>
-                <ion-datetime name="birthdate" displayFormat="DD/MM/YYYY" [(ngModel)]="clientForm.dateNaissanceClient" clearInput></ion-datetime>
-              </ion-item>
-            </ion-col >
-          </ion-row>
-
-          <ion-row class="ion-row" >
-            <ion-col>
-              <ion-item>
-                <ion-label floating>Email</ion-label>
-                <ion-input name="email" [(ngModel)]="clientForm.mailClient" type="text" clearInput></ion-input>
-              </ion-item>
-            </ion-col >
-          </ion-row>
-          <ion-row class="ion-row" >
-
-            <ion-col col-6>
-            </ion-col >
-            <ion-col col-6>
-              <div padding class="button">
-                <button class="green-button" ion-button color="green-madera">VALIDER</button>
-              </div>
-            </ion-col >
-
-          </ion-row>
-
-        </ion-grid>
-      </form >
-
-    </ion-card-content>
-    </ion-content>
-
-  </ion-card>
 
