--- a/src/pages/conception-devis/conception-devis.scss
+++ b/src/pages/conception-devis/conception-devis.scss
@@ -1,8 +1,10 @@
 page-conception-devis {
 
-  .button_remove{
-    background-color:color($colors, grey-madera)
+  .button-remove{
+    background-color:red;
   }
+
+
 }
 
 
