--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -61,6 +61,10 @@ ion-content{
   height:100%;
 }
 
+.min-height-max{
+  min-height:100%;
+}
+
 // Alert
 .alert-head{
   background-color:color($colors, green-madera);
