--- a/src/pages/identification-projet/identification-projet.scss
+++ b/src/pages/identification-projet/identification-projet.scss
@@ -9,9 +9,14 @@ page-identification-projet{
     max-width: 200px;
     margin: 0 auto;
   }
-  .ion-card-projects{
+  .projects-div{
     max-width: 350px;
     margin:0 auto;
+  }
+
+  .projects-scroll{
+    max-height: 500px;
+    overflow-y:auto;
   }
 }
 
