--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,8 @@ $colors: (
   dark:       #222,
   brown-madera: #683c11,
   green-madera: #95c11f,
-  grey-madera: #999999
+  grey-madera: #999999,
+  red-madera: #ff4c4c
 );
 
 // All Variables
